Fix dice dropdown not being visible

--- a/public/scripts/extensions/caption/style.css
+++ b/public/scripts/extensions/caption/style.css
@@ -5,7 +5,7 @@
     margin: 0;
     padding: 1px;
     background: no-repeat;
-    background-size: 26px auto;
+    background-size: 24px 24px;
     background-position: center center;
     outline: none;
     border: none;
