--- a/public/style.css
+++ b/public/style.css
@@ -238,7 +238,6 @@ code {
     background-position: center;
     display: flex;
     flex-direction: row;
-    overflow: hidden;
 }
 
 #send_but {
